--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,25 +89,6 @@ body {
   background-color: #30343426;
 }
 
-@media (max-width: 768px) {
-  h1 {
-    font-size: 1.75rem;
-  }
-
-  h2,
-  h3 {
-    font-size: 1.5rem;
-  }
-
-  h5 {
-    font-size: 1.1rem;
-  }
-
-  .gradient-box {
-    padding: 40px 0;
-  }
-}
-
 body.modal-open {
   overflow: hidden !important;
 }
@@ -129,6 +110,22 @@ body.modal-open {
   color: #710FD8;
 }
 
+.main {
+  color: #fff;
+  padding: 5rem 0;
+}
+.main::before {
+  content: '';
+  position: absolute;
+  top: -15rem;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url(../img/main-bg.png);
+  background-repeat: no-repeat;
+  background-position: center 0;
+}
+
 .video-wrapper {
   position: relative;
   padding-bottom: 56.25%;
@@ -140,4 +137,36 @@ body.modal-open {
   width: 100%;
   height: 100%;
   border-radius: 0.5rem;
+}
+
+@media (max-width: 1200px) {
+  .main::before {
+    top: -10rem;
+  }
+}
+
+@media (max-width: 768px) {
+  h1 {
+    font-size: 1.75rem;
+  }
+
+  h2,
+  h3 {
+    font-size: 1.5rem;
+  }
+
+  h5 {
+    font-size: 1.1rem;
+  }
+
+  .gradient-box {
+    padding: 40px 0;
+  }
+  .main {
+    padding: 3rem 0;
+  }
+  .main::before {
+    top: 0;
+    background-size: auto 100%;
+  }
 }
